File apps/ledger-live-desktop/static/i18n/en/app.json was translated to ar-AE locale

--- a/apps/ledger-live-desktop/static/i18n/ar/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ar/app.json
@@ -173,7 +173,43 @@
       "REGISTER" : "مُسجّل",
       "STAKE" : "مُكدَّس",
       "UNSTAKE" : "غير مُكدَّس",
-      "WITHDRAW_UNSTAKED" : "مسحوب"
+      "WITHDRAW_UNSTAKED" : "مسحوب",
+      "SENDING" : "إرسال"
+    },
+    "edit" : {
+      "title" : "التسريع أو الإلغاء",
+      "description" : "معاملتك جارية. يمكنك تسريعها برسوم شبكة أعلى، أو إلغائها.",
+      "stuckDescription" : "معاملتك عالقة. قم بتسريعها برسوم شبكة أعلى أو قم بإلغائها.",
+      "previousFeesInfo" : "معاملتك السابقة استحقت رسوم شبكة تبلغ",
+      "panel" : {
+        "title" : "التسريع أو الإلغاء",
+        "description" : "أحدث معاملة \"إرسال\" لك عالقة. قم بتسريع المعاملة برسوم شبكة أعلى أو قم بإلغائها."
+      },
+      "speedUp" : {
+        "title" : "تسريع",
+        "description" : "أعد تقديم المعاملة برسوم شبكة أعلى."
+      },
+      "cancel" : {
+        "title" : "إلغاء",
+        "description" : "إرسال 0 {{ticker}} إلى عنوانك برسوم أعلى."
+      },
+      "steps" : {
+        "method" : {
+          "title" : "الطريقة"
+        },
+        "fees" : {
+          "title" : "رسوم"
+        },
+        "summary" : {
+          "title" : "الملخص"
+        },
+        "device" : {
+          "title" : "الجهاز"
+        },
+        "confirmation" : {
+          "title" : "تأكيد"
+        }
+      }
     }
   },
   "byteSize" : {
@@ -1399,7 +1435,7 @@
         "label" : "شائع"
       },
       "earn" : {
-        "title" : "اكسب",
+        "title" : "تكديس",
         "description" : "قم بتنمية أصولك المشفرة مع Ledger"
       }
     }
@@ -5356,7 +5392,7 @@
       "description" : "يجب تطبيق التوقيع في غضون 30 ثانية. يرجى إعادة المحاولة مرة أخرى."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "الطاقة أقل من المطلوب. قد تدفع رسوم تصل إلى 50TRX."
+      "title" : "الطاقة أقل من المطلوب. قد تدفع رسوم تصل إلى 50 TRX."
     },
     "PairingFailed" : {
       "title" : "لم يتم إجراء الإقران بنجاح",
