--- a/apps/ledger-live-desktop/static/i18n/ar/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ar/app.json
@@ -606,6 +606,28 @@
       "creditedAmount" : "المبلغ المضاف"
     }
   },
+  "stake" : {
+    "noFundsModal" : {
+      "title" : "شراء أو تبادل أو تلقَى",
+      "text" : "ليس لديك ما يكفي من {{coin}} متاحة للتكديس",
+      "description" : "ليس لديك أموال كافية؟ لا تقلق، يمكنك شراء أو مبادلة أو تلقي الأصول المشفرة بأمان مباشرةً في Ledger Live.",
+      "options" : {
+        "buy" : {
+          "title" : "شراء",
+          "body" : "الشراء عن طريق مزودين موثوقين"
+        },
+        "swap" : {
+          "title" : "مبادلة",
+          "label" : "شائع",
+          "body" : "تحويل أصول مشفرة إلى أصول مشفرة بشكل آمن"
+        },
+        "receive" : {
+          "title" : "تلقي",
+          "body" : "تلقي الأصول المشفرة في محفظتك"
+        }
+      }
+    }
+  },
   "lottieDebugger" : {
     "buttonTitle" : "اختبر"
   },
@@ -1099,6 +1121,7 @@
       "receive" : "تلقي",
       "send" : "إرسال",
       "swap" : "مبادلة",
+      "stake" : "تكديس",
       "buy" : "شراء",
       "sell" : "بيع",
       "edit" : "تعديل الحساب",
@@ -1364,7 +1387,22 @@
     },
     "recentActivity" : "أحدث العمليات",
     "totalBalance" : "إجمالي الرصيد",
-    "transactionsPendingConfirmation" : "لم يتم تأكيد بعض المعاملات بعد. ستظهر هذه في رصيدك ويمكن استخدامها بعد تأكيدها."
+    "transactionsPendingConfirmation" : "لم يتم تأكيد بعض المعاملات بعد. ستظهر هذه في رصيدك ويمكن استخدامها بعد تأكيدها.",
+    "featuredButtons" : {
+      "buySell" : {
+        "title" : "شراء / بيع",
+        "description" : "الشراء والبيع عن طريق مزودين موثوقين"
+      },
+      "swap" : {
+        "title" : "مبادلة",
+        "description" : "تحويل أصول مشفرة إلى أصول مشفرة بشكل آمن",
+        "label" : "شائع"
+      },
+      "earn" : {
+        "title" : "اكسب",
+        "description" : "قم بتنمية أصولك المشفرة مع Ledger"
+      }
+    }
   },
   "currentAddress" : {
     "title" : "العنوان الحالي",
@@ -2809,7 +2847,7 @@
   "cosmos" : {
     "delegation" : {
       "emptyState" : {
-        "description" : "يمكنك كسب مكافآت ATOM عن طريق تفويض أصولك.",
+        "description" : "يمكنك كسب مكافآت {{currencyTicker}} عن طريق تفويض أصولك.",
         "info" : "كيف يعمل التفويض",
         "delegation" : "اكسب المكافآت"
       },
@@ -2834,8 +2872,8 @@
         "title" : "تفويض",
         "steps" : {
           "starter" : {
-            "description" : "يمكنك كسب المكافآت عن طريق تفويض أصولك ATOM لمدقق.",
-            "bullet" : ["أنت تحتفظ بملكية الأصول المفوضة", "تفويض باستخدام جهازك Ledger", "الأصول ستكون متاحة بعد 21 يوماً من إلغاء التفويض"],
+            "description" : "يمكنك كسب المكافآت عن طريق تفويض أصولك {{currencyTicker}} إلى مدقق.",
+            "bullet" : ["أنت تحتفظ بملكية الأصول المفوضة", "تفويض باستخدام جهازك Ledger", "الأصول ستكون متاحة بعد {{numberOfDays}} يوماً من إلغاء التفويض"],
             "warning" : {
               "description" : "اختر المدقق بحكمة: فقد يتم فقدان جزء من أصولك المفوضة بشكل لا رجعة فيه إذا لم يتصرف المدقق بشكل لائق."
             }
@@ -2912,7 +2950,7 @@
             "currentDelegation" : "التفويض الحالي",
             "newDelegation" : "تفويض جديد",
             "chooseValidator" : "اختر مدقق",
-            "warning" : "سيكون عليك الانتظار لمدة <0>21 يوماً</0> لإعادة التفويض من المدقق الجديد إذا قمنت بتغيير رأيك مرة أخرى",
+            "warning" : "سيجب عليك الانتظار لمدة <0>{{numberOfDays}}</0> يوماً لإعادة التفويض من المدقق الجديد إذا غيرت رأيك مجدداً",
             "amountLabel" : "المبلغ المراد إعادة تفويضه"
           },
           "device" : {
@@ -2939,7 +2977,7 @@
         "steps" : {
           "amount" : {
             "title" : "المبلغ",
-            "subtitle" : "تستغرق عملية إلغاء التفويض مدة <0>21 يوماً</0> لتنتهي.",
+            "subtitle" : "عملية إلغاء التفويض تستغرق <0>{{numberOfDays}}</0> يوماً لإتمامها.",
             "warning" : "سيتم تحصيل المكافآت فوراً. ستتم إعادة المبلغ غير المفوّض إلى الرصيد المتاح بعد انقضاء فترة <0>الحظر الزمني 21-يوم</0>.",
             "fields" : {
               "validator" : "المدقق",
@@ -3025,176 +3063,6 @@
               "title" : "تمت المطالبة بالمكافآت بنجاح!",
               "text" : "تمت إضافة مكافآتك إلى رصيدك المتاح",
               "cta" : "عرض التفاصيل"
-            },
-            "broadcastError" : "ربما تكون معاملتك قد فشلت. يُرجى الانتظار لحظة ثم تحقق من سجل المعاملات قبل المحاولة مرة أخرى."
-          }
-        }
-      }
-    }
-  },
-  "osmosis" : {
-    "account" : {
-      "subHeader" : {
-        "cardTitle" : "تعمل بواسطة Figment",
-        "moreInfo" : "مزيد من المعلومات",
-        "drawerTitle" : "تعمل بواسطة Figment",
-        "title" : "رمز OSMO متاح الآن في Ledger Live",
-        "description" : "يمكنك الآن بدء إدارة رموزك OSMO وتأمينها من خلال Ledger Live.",
-        "description2" : "رمز OSMO هو رمز أصلي لسلسلة Osmosis ويُستخدم لكل شيء مثل المعاملات، والتكديس والعديد من الميزات القادمة.",
-        "website" : "تعمل بواسطة Figment"
-      }
-    },
-    "memo" : "ملاحظة",
-    "memoPlaceholder" : "اختياري",
-    "memoWarningText" : "عند استخدام الملاحظة، تحقق بعناية من المعلومات مع المستلم",
-    "delegation" : {
-      "emptyState" : {
-        "description" : "يمكنك كسب مكافآت OSMO عن طريق تفويض أصولك.",
-        "info" : "كيف يعمل التفويض",
-        "delegation" : "اكسب المكافآت"
-      },
-      "commission" : "العمولة",
-      "totalStake" : "إجمالي التكديس",
-      "claimRewards" : "المطالبة بالمكافآت",
-      "header" : "التفويض (التفويضات)",
-      "noRewards" : "لا توجد مكافآت متاحة",
-      "delegate" : "أضف",
-      "undelegate" : "إلغاء التفويض",
-      "redelegate" : "إعادة التفويض",
-      "redelegateDisabledTooltip" : "يمكنك اعادة التفويض مرة أخرى <0>{{days}}</0>",
-      "redelegateMaxDisabledTooltip" : "لا يمكنك إعادة تفويض أكثر من <0>7</0> مدققين في كل مرة",
-      "undelegateDisabledTooltip" : "لا يمكنك إلغاء تفويض أكثر من <0>7</0> مدققين في كل مرة",
-      "reward" : "المطالبة بالمكافآت",
-      "currentDelegation" : "مُفوض: <0>{{amount}}</0>",
-      "estYield" : "العائد التقديري",
-      "activeTooltip" : "المبالغ المفوضة تولد المكافآت",
-      "inactiveTooltip" : "المبالغ غير المفوضة لا تولد مكافآت",
-      "minSafeWarning" : "لا توجد أموال كافية",
-      "flow" : {
-        "title" : "تفويض",
-        "steps" : {
-          "starter" : {
-            "description" : "يمكنك كسب المكافآت عن طريق تفويض أصولك OSMO إلى مدقق.",
-            "bullet" : ["أنت تحتفظ بملكية الأصول المفوضة", "قم بالتفويض باستخدام جهازك Ledger", "الأصول ستكون متاحة بعد 14 من إلغاء التفويض"],
-            "warning" : {
-              "description" : "اختر المدقق بحكمة: فقد يتم فقدان جزء من أصولك المفوضة بشكل لا رجعة فيه إذا لم يتصرف المدقق بشكل لائق."
-            }
-          },
-          "amount" : {
-            "title" : "المبلغ"
-          },
-          "validator" : {
-            "title" : "المدققون"
-          },
-          "connectDevice" : {
-            "title" : "الجهاز"
-          },
-          "confirmation" : {
-            "title" : "تأكيد",
-            "success" : {
-              "title" : "لقد قمت بتفويض أصولك بنجاح",
-              "text" : "سيتم تحديث رصيد حسابك عندما تقوم سلسلة الكتل بتأكيد المعاملة.",
-              "cta" : "رؤية التفاصيل"
-            },
-            "broadcastError" : "ربما تكون معاملتك قد فشلت. يُرجى الانتظار لحظة ثم تحقق من سجل المعاملات قبل المحاولة مرة أخرى."
-          }
-        }
-      }
-    },
-    "claimRewards" : {
-      "flow" : {
-        "title" : "المطالبة بالمكافآت",
-        "steps" : {
-          "claimRewards" : {
-            "title" : "المكافآت",
-            "compound" : "مُجمع",
-            "claim" : "تحصيل",
-            "compoundOrClaim" : "مُجمع أم تحصيل",
-            "compoundDescription" : "سيتم إضافة المكافآت إلى المبلغ المفوض",
-            "claimDescription" : "ستتم إضافة المكافآت إلى الرصيد المتاح",
-            "compoundInfo" : "لقد كسبت <0>{{amount}}</0>. بالنقر على متابعة، ستتم المطالبة بهم الآن وتفويضهم تلقائياً إلى نفس المدقق.",
-            "claimInfo" : "لقد كسبت <0>{{amount}}</0> من المدقق الموضح أدناه. بالنقر على متابعة، ستتم المطالبة بهم الآن وإضافتهم تلقائياً إلى الرصيد المتاح.",
-            "selectLabel" : "اختر تفويض"
-          },
-          "connectDevice" : {
-            "title" : "جهاز"
-          },
-          "confirmation" : {
-            "title" : "تأكيد",
-            "label" : "تأكيد",
-            "success" : {
-              "title" : "تم تحصيل المكافآت بنجاح",
-              "titleCompound" : "تم تجميع المكافآت بنجاح",
-              "text" : "تمت إضافة مكافآتك إلى رصيدك المتاح",
-              "textCompound" : "مكافآتك <0>{{amount}}</0> تم تفويضها تلقائياً إلى <0>{{validator}}</0>",
-              "cta" : "رؤية التفاصيل"
-            },
-            "pending" : {
-              "title" : "جاري بث المعاملة..."
-            },
-            "broadcastError" : "ربما تكون معاملتك قد فشلت. يُرجى الانتظار لحظة ثم تحقق من سجل المعاملات قبل المحاولة مرة أخرى."
-          }
-        }
-      }
-    },
-    "redelegation" : {
-      "flow" : {
-        "title" : "إعادة تفويض الأصول",
-        "steps" : {
-          "starter" : {
-            "title" : "إعادة التفويض",
-            "description" : "استخدم إعادة التفويض للتغيير من مدقق إلى مدقق آخر بسهولة. لكن إذا قمت بتغير رأيك مرة أخرى، سيكون عليك الانتظار لأن إعادة التفويض تؤدي إلى تفعيل فترة حظر زمني لمدة 14 يوماً.",
-            "warning" : "اختر المدقق بحكمة: فقد يتم فقدان جزء من أصولك المفوضة بشكل لا رجعة فيه إذا لم يتصرف المدقق بشكل لائق. يمكن أن يكون لديك <0>7 عمليات إعادة تفويض مُعلقة</0> كحد أقصى.",
-            "howDelegationWorks" : "كيف يعمل التفويض؟"
-          },
-          "validators" : {
-            "title" : "المدققون",
-            "currentDelegation" : "التفويض الحالي",
-            "newDelegation" : "تفويض جديد",
-            "chooseValidator" : "اختر مدقق",
-            "warning" : "سيكون عليك الانتظار لمدة <0>14 يوماً</0> لإعادة التفويض من المدقق الجديد إذا قمت بتغيير رأيك مرة أخرى",
-            "amountLabel" : "المبلغ المطلوب إعادة تفويضه"
-          },
-          "device" : {
-            "title" : "جهاز"
-          },
-          "confirmation" : {
-            "title" : "تأكيد",
-            "success" : {
-              "title" : "لقد قمت بإعادة تفويض أصولك بنجاح",
-              "text" : "إعادة التفويض ستقوم بالتحديث بمجرد أن تقوم سلسلة الكتل (blockchain) بتأكيد المعاملة",
-              "cta" : "رؤية التفاصيل"
-            },
-            "broadcastError" : "ربما تكون معاملتك قد فشلت. يُرجى الانتظار لحظة ثم تحقق من سجل المعاملات قبل المحاولة مرة أخرى."
-          }
-        }
-      }
-    },
-    "undelegation" : {
-      "header" : "إلغاء التفويض (إلغاء التفويضات)",
-      "headerTooltip" : "متاحة بعد فترة الحظر الزمني الممتد لفترة 14 يوماً",
-      "inactiveTooltip" : "المبالغ غير المفوضة لا تولد مكافآت.",
-      "flow" : {
-        "title" : "إلغاء تفويض الأصول",
-        "steps" : {
-          "amount" : {
-            "title" : "المبلغ",
-            "subtitle" : "عملية إلغاء التفويض تستغرق مدة <0>14 يوماً</0> للانتهاء.",
-            "warning" : "سيتم تحصيل المكافآت فوراً. ستتم إعادة المبلغ غير المفوّض إلى الرصيد المتاح بعد انقضاء فترة <0>الحظر الزمني لمدة 14 يوماً</0>.",
-            "fields" : {
-              "validator" : "المدقق",
-              "amount" : "المبلغ المراد إلغاء تفويضه"
-            }
-          },
-          "device" : {
-            "title" : "جهاز"
-          },
-          "confirmation" : {
-            "title" : "تأكيد",
-            "success" : {
-              "title" : "لقد قمت بإلغاء تفويض أصولك بنجاح.",
-              "description" : "<0>{{amount}}</0> تم إلغاء تفويضهم من <0>{{validator}}</0>",
-              "cta" : "رؤية التفاصيل"
             },
             "broadcastError" : "ربما تكون معاملتك قد فشلت. يُرجى الانتظار لحظة ثم تحقق من سجل المعاملات قبل المحاولة مرة أخرى."
           }
@@ -3602,6 +3470,71 @@
       },
       "providerTitle" : "اكسب مع {{provider}}",
       "providerLink" : "تعرف على المزيد عن {{provider}}"
+    }
+  },
+  "avalanchepchain" : {
+    "account" : {
+      "subHeader" : {
+        "cardTitle" : "تعمل بواسطة Figment",
+        "moreInfo" : "مزيد من المعلومات",
+        "drawerTitle" : "تعمل بواسطة Figment",
+        "title" : "رمز AVAX متاح الآن في Ledger Live",
+        "description" : "يمكنك الآن بدء إدارة رموزك AVAX وتأمينها من خلال Ledger Live.",
+        "website" : "تعمل بواسطة Figment"
+      }
+    },
+    "stakedBalance" : "التكديس",
+    "stakedBalanceTooltip" : "المبلغ المُكدَّس إلى مدققين.",
+    "delegation" : {
+      "header" : "التفويضات",
+      "add" : "إضافة",
+      "commission" : "العمولة",
+      "validator" : "مُعرِّف العُقدة",
+      "startTime" : "وقت البدء",
+      "endTime" : "وقت الانتهاء",
+      "stakeAmount" : "تكديس",
+      "potentialReward" : "المكافأة المحتملة",
+      "emptyState" : {
+        "description" : "يمكنك كسب مكافآت AVAX عن طريق تفويض أصولك.",
+        "info" : "كيف يعمل التفويض",
+        "delegation" : "اكسب المكافآت"
+      },
+      "notEnoughToDelegate" : "يجب أن يكون لديك على الأقل 25 AVAX متاحة على سلسلة P لتصبح مُفوِّضاً.",
+      "validatorStake" : "حصة المدقق",
+      "validatorRemainingStake" : "متاح",
+      "flow" : {
+        "title" : "تفويض",
+        "steps" : {
+          "starter" : {
+            "description" : "يمكنك كسب المكافآت عن طريق تفويض أصولك AVAX إلى مدقق.",
+            "bullet" : ["أنت تحتفظ بملكية الأصول المفوضة", "قم بالتفويض باستخدام جهازك Ledger", "مطلوب 25 AVAX بحد أدنى للتكديس", "يجب تفويض AVAX لمدة أسبوعين بحد أدنى"]
+          },
+          "amount" : {
+            "title" : "المبلغ"
+          },
+          "validator" : {
+            "title" : "المدققون",
+            "ledgerByFigmentTC" : "شروط وأحكام Ledger by Figment"
+          },
+          "endDate" : {
+            "title" : "تاريخ الانتهاء",
+            "text" : "اختر وقتاً لينتهي فيه هذا التفويض. تاريخ انتهاء هذا التفويض يجب أن يكون بين {{minEndDate}} و {{maxEndDate}}.",
+            "label" : "تاريخ انتهاء التفويض"
+          },
+          "connectDevice" : {
+            "title" : "الجهاز"
+          },
+          "confirmation" : {
+            "title" : "تأكيد",
+            "success" : {
+              "title" : "لقد قمت بتفويض أصولك بنجاح",
+              "text" : "سيتم تحديث رصيد حسابك عندما تقوم سلسلة الكتل بتأكيد المعاملة.",
+              "cta" : "رؤية التفاصيل"
+            },
+            "broadcastError" : "ربما تكون معاملتك قد فشلت. يُرجى الانتظار لحظة ثم تحقق من سجل المعاملات قبل المحاولة مرة أخرى."
+          }
+        }
+      }
     }
   },
   "near" : {
@@ -5642,6 +5575,9 @@
     "StellarBurnAddressError" : {
       "title" : "حدثت مشكلة أثناء محاولة إضافة حساب Stellar"
     },
+    "AvalancheMinimumAmountError" : {
+      "title" : "الحد الأدنى للمبلغ هو 25 AVAX"
+    },
     "HederaAddAccountError" : {
       "title" : "لم تتم إضافة حسابك. يرجى إعادة المحاولة."
     },
@@ -5757,7 +5693,7 @@
     }
   },
   "customImage" : {
-    "title" : "Custom lock screen",
+    "title" : "شاشة قَفل مُخصّصة",
     "steps" : {
       "choose" : {
         "stepLabel" : "اختر صورة",
